tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/basic-multiline-quotes.stderr
TOML parse error at line 1, column 46
  |
1 | str5 = """Here are three quotation marks: """."""
  |                                              ^
expected newline, `#`
